tests/fixtures/language/v3/valid/entities/entity-with-rule.allium
-- allium: 3

entity User {
    email: String
}

rule RegisterUser {
    when: SignupRequested(email)
    ensures: User.created(email: email)
}
